# ChangeLog for x11-wm/i3
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/ChangeLog,v 1.31 2013/05/30 15:24:54 xarthisius Exp $

  30 May 2013; Kacper Kowalik <xarthisius@gentoo.org> i3-4.5.1.ebuild:
  Add epatch_user() wrt #471716 by René 'Necoro' Neumann <gentoo@necoro.eu>

*i3-4.5.1 (19 Mar 2013)

  19 Mar 2013; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.5.1.ebuild,
  -i3-4.5.ebuild:
  Version bump, drop buggy release

*i3-4.5 (12 Mar 2013)

  12 Mar 2013; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.5.ebuild,
  -i3-4.3.ebuild:
  Drop old, version bump

  16 Dec 2012; Kacper Kowalik <xarthisius@gentoo.org> i3-4.3.ebuild,
  i3-4.4.ebuild:
  Respect AR wrt #447496 by Vicente Olivert Riera <peratu@carrosses.com>

*i3-4.4 (12 Dec 2012)

  12 Dec 2012; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.4.ebuild:
  Version bump

  19 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> i3-4.3.ebuild:
  Remove obsolete sed, simplify ebuild

  19 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> i3-4.3.ebuild:
  Remove bits that were left from ebuild development

  19 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> i3-4.3.ebuild:
  Fix use dependencies on pango and cairo

*i3-4.3 (19 Sep 2012)

  19 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> +i3-4.3.ebuild,
  metadata.xml:
  Version bump

  13 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> i3-4.2.ebuild:
  Add postinst info about suggested optional dependencies wrt to #434388 and
  #434898 by Erik Price <gentoo@erikprice.net> and avx <idevelop@ph030.de>
  respectively

  21 Aug 2012; Kacper Kowalik <xarthisius@gentoo.org> -i3-4.1.2-r1.ebuild:
  Drop old

  26 Jun 2012; Jeff Horelick <jdhore@gentoo.org> i3-4.2.ebuild:
  marked x86 per bug 422441

  20 Jun 2012; Agostino Sarubbo <ago@gentoo.org> i3-4.2.ebuild:
  Stable for amd64, wrt bug #422441

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> i3-4.1.2-r1.ebuild,
  i3-4.2.ebuild: