@@ -1,13 +1,0 @@
-DEFINED_PHASES=compile install postinst prepare
-DEPEND=dev-libs/libev dev-libs/libpcre dev-libs/yajl x11-libs/libxcb x11-libs/libXcursor x11-libs/libX11 x11-libs/startup-notification x11-libs/xcb-util pango? ( >=x11-libs/pango-1.30.0[X] >=x11-libs/cairo-1.12.2[X,xcb] ) virtual/pkgconfig sys-devel/flex sys-devel/bison
-DESCRIPTION=An improved dynamic tiling window manager
-EAPI=4
-HOMEPAGE=http://i3wm.org/
-IUSE=+pango
-KEYWORDS=~amd64 ~x86
-LICENSE=BSD
-RDEPEND=dev-libs/libev dev-libs/libpcre dev-libs/yajl x11-libs/libxcb x11-libs/libXcursor x11-libs/libX11 x11-libs/startup-notification x11-libs/xcb-util pango? ( >=x11-libs/pango-1.30.0[X] >=x11-libs/cairo-1.12.2[X,xcb] ) x11-apps/xmessage
-SLOT=0
-SRC_URI=http://i3wm.org/downloads/i3-4.4.tar.bz2
-_eclasses_=multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f
-_md5_=34fdf2c99af9bff6fb92cb2eaced2641
